fixing the overlapping title button #941

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-width: 500px;
+  min-width: 555px;
 }
 
 code {
